--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,37 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="col-12 mt-5 h4 d-flex justify-content-center">
+    <div class="h6">新規登録</div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+<div class="col-6 mx-auto border">
+    <%= form_with model: @user, url: user_registration_path do |f| %>
+      <div class="field my-4">
+        <%= f.label :ニックネーム, class:'h6' %><br />
+        <%= f.text_field :nickname, class:'col-12 px-1' %>
+      </div>
+
+      <div class="field my-4">
+        <%= f.label :メールアドレス, class:'h6' %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"sample@exanple.com", class:'col-12 px-1' %>
+      </div>
+
+      <div class="field mt-4 mb-5">
+        <%= f.label :パスワード, class:'h6' %>
+        <% if @minimum_password_length %>
+          <em>(半角 <%= @minimum_password_length %> 文字以上)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class:'col-12 px-1' %>
+      </div>
+
+      <div class="actions mt-5 mb-3 col-12 mx-auto px-0">
+        <%= f.submit "新規登録", class: 'btn btn-info col-12' %>
+      </div>
+    <% end %>
+    <div class="h6 py-1 d-flex flex-column">
+      <div class="pb-2"><b>◇既に会員登録をされている方へ◇</b></div>
+      <div class="pb-2">　　　　<u>こちら</u> からログインできます </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+<!--<= render "public/shared/links" %>-->
+</div>
