--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,71 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="d-flex flex-column vh-100">
+    <header class="border-bottom pb-2">
+      <div class="container col-11">
+        <nav class="navbar navbar-expand-lg navbar-light mt-2 pt-4 pb-3 pr-0">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+                <% if user_signed_in? %>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to 'マイページ',public_customer_path(@current_user.id), class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to '商品一覧',public_items_path, class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to 'カート',public_cart_items_path, class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                  <li class="nav-item mx-3">
+                    <%= link_to 'ログアウト',destroy_user_session_path, method: :delete, class: 'nav-link text-dark border rounded'%>
+                  </li>
+                <% else %>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to 'About',public_about_path, class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to '商品一覧',public_items_path, class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to '新規登録',new_customer_registration_path, class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                  <li class="nav-item mx-3">
+                    <!--<= link_to 'ログイン',new_customer_session_path, class: 'nav-link text-dark border rounded' %>-->
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+        </nav>
+        <div class="row">
+          <div class="row col-9">
+            <h2>宣誓！<i class="fa-solid fa-cookie-bite"></i></h2>
+          </div>
+
+          <!--検索窓-->
+            <div class="search-form col-2 py-1 px-1 my-2 mr-3 ml-auto border border-secondary">
+              <!--<= form_tag({controller:"public/post", action:"index"}, method: :get) do %>-->
+                <!--<= text_field_tag( "search","",{ placeholder: "Search", class: "p-0 col-10", style: "border: none" }) %>-->
+                <%= button_tag type: 'submit', class: 'btn btn-outline-primary px-1 py-0 col-1', style: "border: none" do %>
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                <% end %>
+              <!--< end %>-->
+            </div>
+            <!------->
+
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <%= yield %>
+    </main>
+
+    <footer>
+    </footer>
+
   </body>
 </html>
