--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,6 +76,13 @@
     </header>
 
     <main>
+      <div class="d-flex justify-content-center">
+        <div class="my-2">
+          <%= render partial: 'layouts/flash_notice' %>
+          <p class="notice"><% notice %></p>
+        </div>
+      </div>
+
       <%= yield %>
     </main>
 
