--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="col-12 mt-5 h4 d-flex justify-content-center">
+  <div class="col-12 h4 d-flex justify-content-center">
     <div class="h6">新規登録</div>
   </div>
 
