--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
+
   <div class="d-flex justify-content-center">
-    <div class="col-8 border pt-5 px-5 pb-4 h5">
+    <div class="col-8 border border-info pt-5 px-5 pb-4  my-5 h5">
       <p><b>宣誓！</b>は目標に向かって頑張るあなたを応援する、</p>
       <p>[ 進捗管理 × 投稿 ] 型のコミュニティサイトです。</p>
       <p>同じ目標を持った仲間を見つけて、</p>
@@ -9,4 +10,5 @@
       <p>あなたの「続ける」モチベーションの維持に役立ちます。</p>
     </div>
   </div>
+
 </div>
