[fix]ヘッダーリンク修正

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="h6">新規登録</div>
   </div>
 
-<div class="col-6 mx-auto border">
+<div class="col-6 mx-auto border border-info">
     <%= form_with model: @user, url: user_registration_path do |f| %>
       <div class="field my-4">
         <%= f.label :ニックネーム, class:'h6' %><br />
