--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  
+
   <div class="d-flex justify-content-center">
-    <div class="col-7 border mb-4">
+    <div class="col-7 border border-info mb-4 p-4">
       こんにちは、<%= @current_user.nickname %>さん！<br>
       今日の目標は「▲▲」です。<br>
       一日を振り返って、達成度を投稿しましょう！
