--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
         </nav>
         <div class="row">
           <div class="row col-9">
-            <h2>宣誓！<i class="fa-solid fa-cookie-bite"></i></h2>
+            <h2><i class="fa-solid fa-flag"></i> 宣誓！<i class="fa-solid fa-flag"></i></h2>
           </div>
           <!--検索窓-->
             <div class="search-form col-2 py-1 px-1 my-2 mr-3 ml-auto border border-secondary">
