--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,7 +13,9 @@
     <% @posts.each do |post| %>
       <div class="border border-info m-3 p-2">
         <div class="d-flex bd-hightlight">
-          <div class="mr-auto bd-hightlight"><%= post.user.nickname %></div>
+          <%= link_to public_user_posts_path(post.user.id), class: 'text-dark mr-auto bd-hightlight' do %>
+            <u><%= post.user.nickname %></u>
+          <% end %>
           <div class="bd-hightlight text-secondary"><%= post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
           <div class="bd-hightlight ml-3">
             <% if post.achivement == "excellence" %>
