--- a/app/views/public/homes/_current_user_info.html.erb
+++ b/app/views/public/homes/_current_user_info.html.erb
@@ -1,5 +1,6 @@
 <div>
   <h4 class="text-info">User Info</h4>
+  <%= image_tag current_user.get_icon_image(40,40), class: 'border rounded-circle' %>
   <b><%= current_user.nickname %></b>
   <br>
   目標 :
