--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,7 +2,7 @@
 
   <!--サイドバー-->
   <div class="col-3 mb-5 border-right border-info">
-    <%= render partial: 'public/homes/current_useruser_info',locals: { current_user: @current_user } %><br>
+    <%= render partial: 'public/homes/current_user_info',locals: { current_user: @current_user } %><br>
   </div>
 
   <div class="col-9">
@@ -11,10 +11,11 @@
   </div>
   <div>
     <% @posts.each do |post| %>
-      <div class="border border-info m-3 p-2">
+      <div class="border border-info m-3 pt-2 px-2 pb-4">
         <div class="d-flex bd-hightlight">
-          <%= link_to public_user_posts_path(post.user.id), class: 'text-dark mr-auto bd-hightlight' do %>
-            <u><%= post.user.nickname %></u>
+          <%= link_to public_user_posts_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
+            <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+            <span class="border-bottom border-dark"><%= post.user.nickname %></span>
           <% end %>
           <div class="bd-hightlight text-secondary"><%= post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
           <div class="bd-hightlight ml-3">
@@ -30,20 +31,24 @@
         <div class="border border-secondary mt-2 mx-3 px-1">
           <%= post.body %>
         </div>
-        <div class="ml-2">
+        <div class="ml-4 text-info">
           <% post.tags.each do |tag| %>
             # <%= tag.name %>
           <% end %>
         </div>
         <% if post.tomorrow_objective.present? %>
-          <span class="pl-2">明日の目標</span>
+          <div class="pl-2 mt-2">明日の目標</div>
           <div class="border border-secondary mx-3 px-1">
             <%= post.tomorrow_objective %>
           </div>
         <% end %>
-
+        <% if post.image.filename == 'default-image.jpg' %>
+        <% else %>
+          <div class="d-flex justify-content-center">
+            <div><%= image_tag post.get_image(100,100) %></div>
+          </div>
+        <% end %>
       </div>
-
     <% end %>
   </div>
   </div>
