--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div>
     <% @posts.each do |post| %>
-      <div class="border border-info m-3 pt-2 px-2 pb-4">
+      <div class="border border-info m-3 pt-2 px-2">
         <div class="d-flex bd-hightlight">
           <%= link_to public_user_posts_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
             <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
@@ -36,18 +36,32 @@
             # <%= tag.name %>
           <% end %>
         </div>
-        <% if post.tomorrow_objective.present? %>
-          <div class="pl-2 mt-2">明日の目標</div>
-          <div class="border border-secondary mx-3 px-1">
-            <%= post.tomorrow_objective %>
-          </div>
-        <% end %>
         <% if post.image.filename == 'default-image.jpg' %>
         <% else %>
           <div class="d-flex justify-content-center">
             <div><%= image_tag post.get_image(100,100) %></div>
           </div>
         <% end %>
+        <% if post.tomorrow_objective.present? %>
+          <div class="pl-2 mt-2">明日の目標</div>
+          <div class="border border-secondary mx-3 px-1">
+            <%= post.tomorrow_objective %>
+          </div>
+        <% end %>
+        <div class="m-3">
+          <%= link_to public_favorites_path(post.id), method: :post, button: 1, class: 'btn btn-outline-primary' do %>
+            <i class="fa-solid fa-thumbs-up fa-2x"></i> <%= Favorite.types_i18n[:nice] %>
+            <%= post.favorites.count %>
+          <% end %>
+          <%= link_to public_favorites_path(post), method: :post, button: 2, class: 'btn btn-outline-primary ml-2' do %>
+            <i class="fa-solid fa-heart fa-2x"></i> <%= Favorite.types_i18n[:like] %>
+            <%= post.favorites.count %>
+          <% end %>
+          <%= link_to public_favorites_path(post), method: :post, button: 3, class: 'btn btn-outline-primary ml-2' do %>
+            <i class="fa-solid fa-hand-fist fa-2x"></i> <%= Favorite.types_i18n[:fight] %>
+            <%= post.favorites.count %>
+          <% end %>
+        </div>
       </div>
     <% end %>
   </div>
