--- a/app/views/public/posts/user_index.html.erb
+++ b/app/views/public/posts/user_index.html.erb
@@ -25,6 +25,11 @@
           <div class="mr-auto bd-hightlight">
             <%= link_to '削除', public_post_path(post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger" %>
           </div>
+          <% if post.is_released == false %>
+            <div class="mx-3">
+              <i class="fa-solid fa-lock fa-2x" style="color:#17a2b8"></i>
+            </div>
+          <% end %>
           <div class="bd-hightlight text-secondary"><%= post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
           <div class="bd-hightlight ml-3">
             <% if post.achivement == "excellence" %>
