--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div>
     <% @posts_released.each do |post| %>
-      <div class="border border-info m-3 pt-2 px-2">
+      <div class="border border-info m-3 py-2 px-2">
         <div class="d-flex bd-hightlight">
           <%= link_to public_user_posts_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
             <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
@@ -84,11 +84,15 @@
             <% end %>
               <% end %>
           </div>
-          <div class="btn btn-outline-info ml-auto bd-hightlight d-flex align-items-center">
+          <div class="border border-info ml-auto px-2 bd-hightlight d-flex align-items-center text-info">
             合計 <%= post.favorites.count %>
           </div>
         </div>
 
+        <div class="d-flex justify-content-end">
+          <div class="text-secondary mt-2 mr-3">コメント件数：<%= post.post_comments.count %></div>
+          <div><%= link_to 'コメントする',public_post_path(post), class: 'btn btn-outline-secondary mr-3' %></div>
+        </div>
       </div>
     <% end %>
 
