--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -40,6 +40,11 @@
               <% end %>
             </div>
           </div>
+          <% if @post.is_released == false %>
+            <div class="mx-2">
+              <i class="fa-solid fa-lock fa-lg" style="color:#17a2b8"></i>
+            </div>
+          <% end %>
           <div class="bd-hightlight text-secondary"><%= @post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
           <div class="bd-hightlight ml-3">
             <% if @post.achivement == "excellence" %>
@@ -108,9 +113,9 @@
           <div><%= link_to 'ユーザーの投稿一覧を見る',public_user_posts_path(@post.user.id), class: 'btn btn-outline-secondary mr-3' %></div>
         </div>
       </div>
-      <!--コメント用-->
+      <!--コメント投稿用-->
       <div class="border-top border-info">
-        <%= form_with model: @post_comment, url: public_post_comments_path, method: :post do |f| %>
+        <%= form_with model: [@post, @post_comment], url: public_post_comments_path(@post, post_id: @post.id), method: :post do |f| %>
           <div class="d-flex bd-hightlight px-3">
             <div class="flex-grow-1 bd-hightlight"><%= f.text_area :body, placeholder:"コメントを入力",class: 'my-3 px-1 col-12 border border-info',rows: '2' %></div>
             <div class="bd-hightlight">
@@ -121,8 +126,32 @@
           </div>
         <% end %>
       </div>
+      <!--コメント一覧-->
+      <div>
+        <label class="text-secondary">コメント件数：<%= @post.post_comments.count %></label>
+        <div class="overflow-auto"  style="height:250px;">
+          <% @post_comments.each do |post_comment| %>
+            <div class="border-bottom border-info my-3 mx-5">
+              <div class="d-flex bd-hightlight">
+                <div class="bd-hightlight">
+                  <%= image_tag post_comment.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+                  <span class="border-bottom border-dark"><%= post_comment.user.nickname %></span>
+                </div>
+                <div class="bd-hightlight text-secondary ml-3"><%= post_comment.created_at.strftime('%Y/%m/%d %H:%M') %></div>
+                <% if  post_comment.user.id == @current_user.id %>
+                  <div class="ml-auto bd-hightlight">
+                    <%= link_to '削除', public_post_comment_path(post_comment, post_comment.post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger mr-3" %>
+                  </div>
+                <% end %>
+              </div>
+              <div class="pt-1 px-3 pb-3"><%= post_comment.body %></div>
+            </div>
+          <% end %>
+        </div>
+      </div>
     <% else %>
-       <% if @posts_released.present? %>
+    <!--他人の投稿-->
+       <% if @post.is_released == true %>
       <div class="border border-info m-3 py-3 px-2">
         <div class="d-flex bd-hightlight">
           <div class="mr-auto bd-hightlight"></div>
@@ -194,9 +223,47 @@
           <div><%= link_to 'ユーザーの投稿一覧を見る',public_user_posts_path(@post.user.id), class: 'btn btn-outline-secondary mr-3' %></div>
         </div>
       </div>
+      <!--コメント投稿用-->
+      <div class="border-top border-info">
+        <%= form_with model: [@post, @post_comment], url: public_post_comments_path(@post, post_id: @post.id), method: :post do |f| %>
+          <div class="d-flex bd-hightlight px-3">
+            <div class="flex-grow-1 bd-hightlight"><%= f.text_area :body, placeholder:"コメントを入力",class: 'my-3 px-1 col-12 border border-info',rows: '2' %></div>
+            <div class="bd-hightlight">
+              <%= f.button :type => "submit", class: 'btn btn-outline-primary mt-3 ml-3' do %>
+                <i class="fa-solid fa-paper-plane fa-lg"></i>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <!--コメント一覧-->
+      <div>
+        <label class="text-secondary">コメント件数：<%= @post.post_comments.count %></label>
+        <div class="overflow-auto"  style="height:250px;">
+          <% @post_comments.each do |post_comment| %>
+            <div class="border-bottom border-info my-3 mx-5">
+              <div class="d-flex bd-hightlight">
+                <div class="bd-hightlight">
+                  <%= image_tag post_comment.user.get_icon_image(30,30), class: 'border rounded-circle' %>
+                  <span class="border-bottom border-dark"><%= post_comment.user.nickname %></span>
+                </div>
+                <div class="bd-hightlight text-secondary ml-3"><%= post_comment.created_at.strftime('%Y/%m/%d %H:%M') %></div>
+                <% if  post_comment.user.id == @current_user.id %>
+                  <div class="ml-auto bd-hightlight">
+                    <%= link_to '削除', public_post_comment_path(post_comment, post_comment.post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger mr-3" %>
+                  </div>
+                <% end %>
+              </div>
+              <div class="pt-1 px-3 pb-3"><%= post_comment.body %></div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
       <% else %>
-        <div>公開できる投稿がありません</div>
+        <div>この投稿は非公開に設定されています。</div>
       <% end %>
+
     <% end %>
   </div>
   </div>
