--- a/app/views/public/posts/user_index.html.erb
+++ b/app/views/public/posts/user_index.html.erb
@@ -25,7 +25,7 @@
           <div class="mr-auto bd-hightlight">
             <div class="d-flex justify-content-between">
               <%= link_to '削除', public_post_path(post), method: :delete, data: {cofirm: '本当に消しますか?' }, class: "btn btn-outline-danger" %>
-              <%= form_with model: @post, url: public_post_path, method: :patch do |f| %>
+              <%= form_with model: @post, url: public_edit_post_path(post), method: :patch do |f| %>
                 <div class="form-check form-check-inline released-btn">
                   <div class="ml-5">
                     <%= f.radio_button :is_released,"true", class: 'btn-check' %>
@@ -107,11 +107,12 @@
             <% end %>
               <% end %>
           </div>
-          <div class="btn btn-outline-info ml-auto bd-hightlight d-flex align-items-center">
+          <div class="border border-info ml-auto px-2 bd-hightlight d-flex align-items-center text-info">
             合計 <%= post.favorites.count %>
           </div>
         </div>
         <div class="d-flex justify-content-end">
+          <div class="text-secondary mt-2 mr-3">コメント件数：<%= post.post_comments.count %></div>
           <div><%= link_to 'コメントを見る',public_post_path(post), class: 'btn btn-outline-secondary mr-3' %></div>
         </div>
       </div>
@@ -190,12 +191,13 @@
             <% end %>
               <% end %>
           </div>
-          <div class="btn btn-outline-info ml-auto bd-hightlight d-flex align-items-center">
+          <div class="border border-info ml-auto px-2 bd-hightlight d-flex align-items-center text-info">
             合計 <%= post.favorites.count %>
           </div>
         </div>
 
         <div class="d-flex justify-content-end">
+          <div class="text-secondary mt-2 mr-3">コメント件数：<%= post.post_comments.count %></div>
           <div><%= link_to 'コメントする',public_post_path(post), class: 'btn btn-outline-secondary mr-3' %></div>
         </div>
       </div>
