[create]ユーザー一覧ページ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
                     <!--<= link_to 'マイページ',public_user_path(@current_customer.id), class: 'nav-link text-dark border rounded' %>-->
                   </li>
                   <li class="nav-item mx-3">
-                    <!--<= link_to '商品一覧',public_items_path, class: 'nav-link text-dark border rounded' %>-->
+                    <%= link_to 'ユーザー',public_users_path, class: 'nav-link text-dark border rounded' %>
                   </li>
                   <li class="nav-item mx-3">
                     <%= link_to '投稿',public_posts_path, class: 'nav-link text-dark border rounded' %>
