--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Public::Users#index</h1>
-<p>Find me in app/views/public/users/index.html.erb</p>
+<div class="container row">
+
+  <!--サイドバー-->
+  <div class="col-3 mb-5 border-right border-info">
+    <%= render partial: 'public/homes/current_user_info',locals: { current_user: @current_user } %><br>
+  </div>
+
+  <div class="col-9">
+    <div class="d-flex justify-content-center">
+      <div class="h5">すべてのユーザー</div>
+    </div>
+    <div>
+      <% @users.each do |user| %>
+        <div class="border-bottom border-info m-3 p-2">
+          <%= link_to public_user_path(user), class: 'text-dark mr-auto bd-hightlight h5' do %>
+            <%= image_tag user.get_icon_image(30,30), class: 'border rounded-circle' %>
+            <span class="border-bottom border-dark"><%= user.nickname %></span>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+</div>
