--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,36 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+<div class="container row">
+
+  <!--サイドバー-->
+  <div class="col-3 mb-5 border-right border-info">
+    <%= render partial: 'public/homes/current_user_info',locals: { current_user: @current_user } %><br>
+  </div>
+
+  <div class="col-9 my-3">
+    <div class="d-flex justify-content-center">
+      <div class="h5">ユーザーページ</div>
+    </div>
+    <div class="col-10  my-5 mx-auto">
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">ニックネーム</div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight h5"><%= @user.nickname %></div>
+      </div>
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">アイコン画像</div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight "><%= image_tag @user.get_icon_image(100,100), class: 'border rounded-circle' %></div>
+      </div>
+      <div class="d-flex bd-highlight my-5">
+        <div class="bd-highlight col-5 px-0 text-info">目標</div>
+        <div class="bd-highlight col-1"></div>
+        <div class="flex-grow-1 bd-highlight h5"><% if @goal.present? %>
+            <%= @goal.goal %>
+          <% else %>
+            目標が設定されていません
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
