--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -9,21 +9,47 @@
     <div class="d-flex justify-content-center">
       <div class="h5">ユーザーページ</div>
     </div>
+
     <div class="col-10  my-5 mx-auto">
       <div class="d-flex bd-highlight my-5">
-        <div class="bd-highlight col-5 px-0 text-info">ニックネーム</div>
+        <div class="bd-highlight col-5 px-0 text-info">
+          ニックネーム
+        </div>
         <div class="bd-highlight col-1"></div>
-        <div class="flex-grow-1 bd-highlight h5"><%= @user.nickname %></div>
+        <div class="flex-grow-1 bd-highlight h5">
+          <%= @user.nickname %>
+        </div>
       </div>
+
       <div class="d-flex bd-highlight my-5">
-        <div class="bd-highlight col-5 px-0 text-info">アイコン画像</div>
+        <div class="bd-highlight col-5 px-0 text-info">
+          アイコン画像
+        </div>
         <div class="bd-highlight col-1"></div>
-        <div class="flex-grow-1 bd-highlight "><%= image_tag @user.get_icon_image(100,100), class: 'border rounded-circle' %></div>
+        <div class="flex-grow-1 bd-highlight ">
+          <%= image_tag @user.get_icon_image(100,100), class: 'border rounded-circle' %>
+        </div>
       </div>
+
+      <% if @user == @current_user %>
+        <div class="d-flex bd-highlight my-5">
+          <div class="bd-highlight col-5 px-0 text-info">
+            メールアドレス
+          </div>
+          <div class="bd-highlight col-1"></div>
+          <div class="flex-grow-1 bd-highlight h5">
+            <%= @user.email %>
+          </div>
+        </div>
+      <% end %>
+
       <div class="d-flex bd-highlight my-5">
-        <div class="bd-highlight col-5 px-0 text-info">目標</div>
+        <div class="bd-highlight col-5 px-0 text-info">
+          目標
+        </div>
         <div class="bd-highlight col-1"></div>
-        <div class="flex-grow-1 bd-highlight h5"><% if @goal.present? %>
+        <div class="flex-grow-1 bd-highlight h5">
+          <% if @goal.present? %>
             <%= @goal.goal %>
           <% else %>
             目標が設定されていません
@@ -31,6 +57,13 @@
         </div>
       </div>
     </div>
+
+    <div class="d-flex justify-content-center mb-4">
+      <div>
+        <%= link_to 'ユーザー情報編集ページへ', edit_public_user_path(@user), class: 'btn btn-outline-success' %>
+      </div>
+    </div>
+
   </div>
 
 </div>
