--- a/app/views/public/posts/_user_info.html.erb
+++ b/app/views/public/posts/_user_info.html.erb
@@ -1,7 +1,9 @@
 <div>
   <h4 class="text-info">User Info</h4>
-  <%= image_tag post.user.get_icon_image(40,40), class: 'border rounded-circle' %>
-  <b><%= post.user.nickname %>さん</b>
+  <%= link_to public_user_path(user) do %>
+    <%= image_tag post.user.get_icon_image(40,40), class: 'border rounded-circle' %>
+    <b><%= post.user.nickname %>さん</b>
+    <% end %>
   <br>
   目標 :
 
