--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,7 +13,7 @@
     <% @posts_released.each do |post| %>
       <div class="border border-info m-3 py-2 px-2">
         <div class="d-flex bd-hightlight">
-          <%= link_to public_user_posts_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
+          <%= link_to public_user_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
             <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
             <span class="border-bottom border-dark"><%= post.user.nickname %></span>
           <% end %>
